--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'cn.bingoogolapple:bga-refreshlayout:1.0.6'
     compile 'cn.bingoogolapple:bga-refreshlayout:1.0.5@aar'
+    compile project(':library')
 }
