--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:label="@string/title"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.WelcomActivity"
+            android:name=".ui.WelcomeActivity"
             android:label="@string/title"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -27,7 +28,7 @@
         <activity
             android:name=".ui.NewsDescriptionActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/NoActionBar" />
 
         <activity
             android:name=".ui.MainActivity"
